# arrowjet

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  RESULTS_safe_mode.md  airflow_benchmark.py  benchmark.py  bulk_ops.py  config.example.yaml  config_loader.py  diagnostic_read.py  insert_bench.py  mysql_benchmark.py  naive_fetch.py  pg_benchmark.py  requirements.txt  safe_mode_1m.py  safe_mode_comparison.py  safe_mode_ec2.py  setup_4node.py  setup_test_data.py  test_profile_transfer.py  test_read_final.py  test_write_final.py  transfer_benchmark.py  verify_transfer.py  write_benchmark.py
benchmarks/archive/: test_read_10m.py  test_read_1m.py  test_read_4node.py  test_write_1m.py  test_write_copy_only.py  test_write_diagnostic.py  test_write_manual_copy.py  test_write_rigorous.py
docs/: cli_reference.md  configuration.md  extending.md  iam_setup.md  migration_guide.md  product_spec_mvp.md  project_plan.md  proposal.md
docs/future/: ai_data_query_concept.md  aws_service_integrations.md  bulkflow_positioning_integration_strategy.md  bulkflow_positioning_integration_strategy_ideas.md  dbt_python_models_redshift.md  feedback_on_risks_and_mitigations.md
docs/images/: generate_charts.py
tests/: conftest.py  test_auth_integration.py  test_auth_unit.py  test_auto_mode_unit.py  test_bulk_reader_integration.py  test_bulk_reader_unit.py  test_bulk_writer_integration.py  test_bulk_writer_unit.py  test_chunked_read_integration.py  test_chunked_read_unit.py  test_cli_integration.py  test_cli_unit.py  test_connection_integration.py  test_diff_integration.py  test_diff_unit.py  test_engine_integration.py  test_engine_unit.py  test_export_integration.py  test_export_unit.py  test_hardening_unit.py  test_iceberg_integration.py  test_iceberg_unit.py  test_mysql_provider_integration.py  test_mysql_provider_unit.py  test_observability_unit.py  test_postgresql_provider_integration.py  test_postgresql_provider_unit.py  test_preview_integration.py  test_preview_unit.py  test_profiles_unit.py  test_providers_unit.py  test_sqlalchemy_integration.py  test_sqlalchemy_unit.py  test_staging_integration.py  test_staging_unit.py  test_transfer_integration.py  test_transfer_unit.py
(+61 files in other folders)
